--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,8 @@ h1 {
 
 a {
     color: aliceblue;
-    text-decoration: none;
+    text-decoration: none;    
+    font-family: 'Times New Roman', Times, serif;
 }
 
 body {
